GtkStackSwitcher: Disconnect signals when a child is removed

This is quite an oversight, and causes bad things to happen if
the child is later changed.

https://bugzilla.gnome.org/show_bug.cgi?id=736307